# 3d-parser

./: .gitmodules  3dvector.h  CMakeLists.txt  Makefile  README.rst  build.bat  build.sh
formats/: 3ds.cpp  3ds.h
lib/: 3dsftk.h
old/: 3dmatrix.h  3drender.cpp  3drender.h  TextureManager.cpp  TextureManager.h  usefulmath.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigator.cpp  navigator.h  scenemodel.cpp  scenemodel.h  viewer.cpp  viewer.h
