CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (viewer)

SET (CMAKE_BUILD_TYPE Debug)

SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

# external libraries
ADD_SUBDIRECTORY (contrib/assimp assimp)
INCLUDE_DIRECTORIES (SYSTEM contrib/assimp/include)

# main project
ADD_SUBDIRECTORY (src viewer)
